cargo-features = ["different-binary-name"]

[package]
name = "pvzpp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pvzpp"
filename = "pvz++"
path = "src/main.rs"

[dependencies]
pelite = "0.9.0"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.3"

[dependencies.windows]
version = "0.33.0"
features = [
    "Win32_System_Threading",
    "Win32_Foundation", 
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_DirectDraw",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
winres = "0.1"